--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,5 @@
         </activity>
         <activity android:name=".AddActivity"></activity>
     </application>
-
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 </manifest>
